--- a/archives/toutiao-search/2024-04-21.md
+++ b/archives/toutiao-search/2024-04-21.md
@@ -1,57 +1,74 @@
 # 2024-04-21
 
-共 236 条
+共 251 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Apr 21 2024 19:00:31 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Apr 21 2024 20:00:45 GMT+0800 (China Standard Time) -->
+1. [广东英德全市转移19349人](https://so.toutiao.com/search?keyword=广东英德全市转移19349人)
 1. [官方回应许美静演唱会全场喊退票](https://so.toutiao.com/search?keyword=官方回应许美静演唱会全场喊退票)
-1. [广东北江或现接近百年一遇洪水](https://so.toutiao.com/search?keyword=广东北江或现接近百年一遇洪水)
 1. [聆听长三角之“共享”圆舞曲](https://so.toutiao.com/search?keyword=聆听长三角之“共享”圆舞曲)
-1. [男子垂钓被“亿”点点观众围观](https://so.toutiao.com/search?keyword=男子垂钓被“亿”点点观众围观)
-1. [特斯拉与小米SU7价差缩小到1.6万](https://so.toutiao.com/search?keyword=特斯拉与小米SU7价差缩小到1.6万)
-1. [常州副市长蒋鹏举现身凤凰传奇演唱会](https://so.toutiao.com/search?keyword=常州副市长蒋鹏举现身凤凰传奇演唱会)
-1. [女子买内裤裆部有污渍 客服赔10元](https://so.toutiao.com/search?keyword=女子买内裤裆部有污渍+客服赔10元)
-1. [周冠宇F1中国站第14名赛后哭了](https://so.toutiao.com/search?keyword=周冠宇F1中国站第14名赛后哭了)
-1. [研究：中国近一半大城市正在下沉](https://so.toutiao.com/search?keyword=研究：中国近一半大城市正在下沉)
+1. [广东暴雨持续](https://so.toutiao.com/search?keyword=广东暴雨持续)
 1. [周杰伦演唱会VIP席大妈睡得真香](https://so.toutiao.com/search?keyword=周杰伦演唱会VIP席大妈睡得真香)
-1. [周海媚墓碑刻周芷若画像](https://so.toutiao.com/search?keyword=周海媚墓碑刻周芷若画像)
-1. [凤凰传奇演唱会逐渐伍佰化](https://so.toutiao.com/search?keyword=凤凰传奇演唱会逐渐伍佰化)
-1. [《新闻联播》正在直播](https://so.toutiao.com/search?keyword=《新闻联播》正在直播)
+1. [两女生捡花枝拍照被大爷指责乱采](https://so.toutiao.com/search?keyword=两女生捡花枝拍照被大爷指责乱采)
+1. [广东北江或现接近百年一遇洪水](https://so.toutiao.com/search?keyword=广东北江或现接近百年一遇洪水)
+1. [洪秀柱在深大演讲 现场掌声热烈](https://so.toutiao.com/search?keyword=洪秀柱在深大演讲+现场掌声热烈)
+1. [女子报警称遭同学脑电波探测](https://so.toutiao.com/search?keyword=女子报警称遭同学脑电波探测)
+1. [特斯拉与小米SU7价差缩小到1.6万](https://so.toutiao.com/search?keyword=特斯拉与小米SU7价差缩小到1.6万)
+1. [中国游客在印尼坠亡 丈夫悲痛撞墙](https://so.toutiao.com/search?keyword=中国游客在印尼坠亡+丈夫悲痛撞墙)
+1. [长沙一女子打摩的13公里被要120块](https://so.toutiao.com/search?keyword=长沙一女子打摩的13公里被要120块)
+1. [常州副市长蒋鹏举现身凤凰传奇演唱会](https://so.toutiao.com/search?keyword=常州副市长蒋鹏举现身凤凰传奇演唱会)
 1. [清远暴雨致高铁车厢进水？官方辟谣](https://so.toutiao.com/search?keyword=清远暴雨致高铁车厢进水？官方辟谣)
+1. [男子跨省通勤 在北京工作住在太原](https://so.toutiao.com/search?keyword=男子跨省通勤+在北京工作住在太原)
+1. [除了调休就别无他法吗](https://so.toutiao.com/search?keyword=除了调休就别无他法吗)
+1. [南京现男童尸体 网传其父现场指认](https://so.toutiao.com/search?keyword=南京现男童尸体+网传其父现场指认)
+1. [女子买内裤裆部有污渍 客服赔10元](https://so.toutiao.com/search?keyword=女子买内裤裆部有污渍+客服赔10元)
+1. [男孩离家出走躲挂车轮子中间](https://so.toutiao.com/search?keyword=男孩离家出走躲挂车轮子中间)
+1. [岸田向靖国神社供奉祭品 韩国发声](https://so.toutiao.com/search?keyword=岸田向靖国神社供奉祭品+韩国发声)
+1. [周海媚墓碑刻周芷若画像](https://so.toutiao.com/search?keyword=周海媚墓碑刻周芷若画像)
+1. [特斯拉全自动驾驶套餐大幅降价](https://so.toutiao.com/search?keyword=特斯拉全自动驾驶套餐大幅降价)
+1. [秦岚真的送辛芷蕾金戒指了](https://so.toutiao.com/search?keyword=秦岚真的送辛芷蕾金戒指了)
+1. [实拍广州塔夜晚6次接闪](https://so.toutiao.com/search?keyword=实拍广州塔夜晚6次接闪)
+1. [研究：中国近一半大城市正在下沉](https://so.toutiao.com/search?keyword=研究：中国近一半大城市正在下沉)
+1. [凤凰传奇演唱会逐渐伍佰化](https://so.toutiao.com/search?keyword=凤凰传奇演唱会逐渐伍佰化)
+1. [西安网友：我家燃气表比重庆还快](https://so.toutiao.com/search?keyword=西安网友：我家燃气表比重庆还快)
+1. [清远一中学内涝 700余名学生被转移](https://so.toutiao.com/search?keyword=清远一中学内涝+700余名学生被转移)
+1. [男子垂钓被“亿”点点观众围观](https://so.toutiao.com/search?keyword=男子垂钓被“亿”点点观众围观)
+1. [周杰伦问粉丝自己来还是跟朋友来的](https://so.toutiao.com/search?keyword=周杰伦问粉丝自己来还是跟朋友来的)
+1. [媒体揭开电梯维保乱象](https://so.toutiao.com/search?keyword=媒体揭开电梯维保乱象)
+1. [李昌平：警惕非常态的院士联名](https://so.toutiao.com/search?keyword=李昌平：警惕非常态的院士联名)
+1. [85后县长黄来兴被查](https://so.toutiao.com/search?keyword=85后县长黄来兴被查)
+1. [官方通报烧饼摊主被查后免费送饼](https://so.toutiao.com/search?keyword=官方通报烧饼摊主被查后免费送饼)
+1. [深圳暴雨](https://so.toutiao.com/search?keyword=深圳暴雨)
+1. [外交部驻港公署谴责G7涉港言论](https://so.toutiao.com/search?keyword=外交部驻港公署谴责G7涉港言论)
+1. [倪萍回忆陈佩斯春晚救场](https://so.toutiao.com/search?keyword=倪萍回忆陈佩斯春晚救场)
+1. [中国女游客在印尼火山坠亡](https://so.toutiao.com/search?keyword=中国女游客在印尼火山坠亡)
+1. [香港市民冒雨抗议欧盟抹黑香港国安法](https://so.toutiao.com/search?keyword=香港市民冒雨抗议欧盟抹黑香港国安法)
+1. [俄方回应美众院通过没收俄资产法案](https://so.toutiao.com/search?keyword=俄方回应美众院通过没收俄资产法案)
+1. [两女孩小区内玩耍遭陌生老太踢打](https://so.toutiao.com/search?keyword=两女孩小区内玩耍遭陌生老太踢打)
+1. [网友质疑济南燃气费高于北京上海](https://so.toutiao.com/search?keyword=网友质疑济南燃气费高于北京上海)
+1. [中国儒意拿下北京万达投资全部股权](https://so.toutiao.com/search?keyword=中国儒意拿下北京万达投资全部股权)
+1. [黄子韬就不当言论道歉](https://so.toutiao.com/search?keyword=黄子韬就不当言论道歉)
+1. [外媒：伊朗战略忍耐时代已结束](https://so.toutiao.com/search?keyword=外媒：伊朗战略忍耐时代已结束)
+1. [房贷利率还有下调空间吗](https://so.toutiao.com/search?keyword=房贷利率还有下调空间吗)
+1. [“中国最年轻富豪”遭罚没1.33亿](https://so.toutiao.com/search?keyword=“中国最年轻富豪”遭罚没1.33亿)
+1. [周杰伦太阳之子称号杭州演唱会破功](https://so.toutiao.com/search?keyword=周杰伦太阳之子称号杭州演唱会破功)
+1. [曝布林肯将宣布制裁以军一支部队](https://so.toutiao.com/search?keyword=曝布林肯将宣布制裁以军一支部队)
+1. [男子吐槽就餐遇海鲜刺客1只虾28元](https://so.toutiao.com/search?keyword=男子吐槽就餐遇海鲜刺客1只虾28元)
+1. [周冠宇F1中国站第14名赛后哭了](https://so.toutiao.com/search?keyword=周冠宇F1中国站第14名赛后哭了)
+1. [《新闻联播》正在直播](https://so.toutiao.com/search?keyword=《新闻联播》正在直播)
 1. [广东清远多村被水淹](https://so.toutiao.com/search?keyword=广东清远多村被水淹)
 1. [吴艳妮：化妆比赛是因尊重现场观众](https://so.toutiao.com/search?keyword=吴艳妮：化妆比赛是因尊重现场观众)
 1. [邓紫棋和观众一起淋雨](https://so.toutiao.com/search?keyword=邓紫棋和观众一起淋雨)
-1. [洪秀柱在深大演讲 现场掌声热烈](https://so.toutiao.com/search?keyword=洪秀柱在深大演讲+现场掌声热烈)
-1. [除了调休就别无他法吗](https://so.toutiao.com/search?keyword=除了调休就别无他法吗)
-1. [两女孩小区内玩耍遭陌生老太踢打](https://so.toutiao.com/search?keyword=两女孩小区内玩耍遭陌生老太踢打)
-1. [实拍广州塔夜晚6次接闪](https://so.toutiao.com/search?keyword=实拍广州塔夜晚6次接闪)
-1. [官方通报烧饼摊主被查后免费送饼](https://so.toutiao.com/search?keyword=官方通报烧饼摊主被查后免费送饼)
-1. [西安网友：我家燃气表比重庆还快](https://so.toutiao.com/search?keyword=西安网友：我家燃气表比重庆还快)
-1. [深圳暴雨](https://so.toutiao.com/search?keyword=深圳暴雨)
-1. [85后县长黄来兴被查](https://so.toutiao.com/search?keyword=85后县长黄来兴被查)
-1. [俄方回应美众院通过没收俄资产法案](https://so.toutiao.com/search?keyword=俄方回应美众院通过没收俄资产法案)
-1. [黄子韬就不当言论道歉](https://so.toutiao.com/search?keyword=黄子韬就不当言论道歉)
 1. [物业疑监守自盗30多辆电瓶车被抓包](https://so.toutiao.com/search?keyword=物业疑监守自盗30多辆电瓶车被抓包)
-1. [特斯拉全自动驾驶套餐大幅降价](https://so.toutiao.com/search?keyword=特斯拉全自动驾驶套餐大幅降价)
 1. [因洪涝失联的广东江湾镇恢复联系](https://so.toutiao.com/search?keyword=因洪涝失联的广东江湾镇恢复联系)
 1. [日本自卫队两架直升机坠机细节披露](https://so.toutiao.com/search?keyword=日本自卫队两架直升机坠机细节披露)
 1. [以方对美众院通过援助法案表示感谢](https://so.toutiao.com/search?keyword=以方对美众院通过援助法案表示感谢)
-1. [清远一中学内涝 700余名学生被转移](https://so.toutiao.com/search?keyword=清远一中学内涝+700余名学生被转移)
-1. [李昌平：警惕非常态的院士联名](https://so.toutiao.com/search?keyword=李昌平：警惕非常态的院士联名)
-1. [中国儒意拿下北京万达投资全部股权](https://so.toutiao.com/search?keyword=中国儒意拿下北京万达投资全部股权)
-1. [外媒：伊朗战略忍耐时代已结束](https://so.toutiao.com/search?keyword=外媒：伊朗战略忍耐时代已结束)
 1. [韶关4月平均雨量破1951年来同期纪录](https://so.toutiao.com/search?keyword=韶关4月平均雨量破1951年来同期纪录)
-1. [男子吐槽就餐遇海鲜刺客1只虾28元](https://so.toutiao.com/search?keyword=男子吐槽就餐遇海鲜刺客1只虾28元)
-1. [倪萍回忆陈佩斯春晚救场](https://so.toutiao.com/search?keyword=倪萍回忆陈佩斯春晚救场)
 1. [日元贬值冲击外籍劳工市场](https://so.toutiao.com/search?keyword=日元贬值冲击外籍劳工市场)
 1. [广东阳山现洪涝灾害已转移1.4万人](https://so.toutiao.com/search?keyword=广东阳山现洪涝灾害已转移1.4万人)
-1. [南京现男童尸体 网传其父现场指认](https://so.toutiao.com/search?keyword=南京现男童尸体+网传其父现场指认)
-1. [中国女游客在印尼火山坠亡](https://so.toutiao.com/search?keyword=中国女游客在印尼火山坠亡)
-1. [网友质疑济南燃气费高于北京上海](https://so.toutiao.com/search?keyword=网友质疑济南燃气费高于北京上海)
 1. [海口用主题灯光秀欢迎海口舰回家](https://so.toutiao.com/search?keyword=海口用主题灯光秀欢迎海口舰回家)
 1. [男子患白血病女友不离不弃举债救人](https://so.toutiao.com/search?keyword=男子患白血病女友不离不弃举债救人)
 1. [酒泉夜空现长尾巴不明发光物](https://so.toutiao.com/search?keyword=酒泉夜空现长尾巴不明发光物)
-1. [男子跨省通勤 在北京工作住在太原](https://so.toutiao.com/search?keyword=男子跨省通勤+在北京工作住在太原)
 1. [广东飞来峡水利枢纽溢流坝正在泄洪](https://so.toutiao.com/search?keyword=广东飞来峡水利枢纽溢流坝正在泄洪)
 1. [农民工站吊车吊钩上从火场救出小孩](https://so.toutiao.com/search?keyword=农民工站吊车吊钩上从火场救出小孩)
 1. [广西网友实拍房顶遭雷击炸出坑](https://so.toutiao.com/search?keyword=广西网友实拍房顶遭雷击炸出坑)
@@ -72,10 +89,8 @@
 1. [哈姆：之后防约基奇还会有调整](https://so.toutiao.com/search?keyword=哈姆：之后防约基奇还会有调整)
 1. [知情人称重庆寿宴离世演员有高血压](https://so.toutiao.com/search?keyword=知情人称重庆寿宴离世演员有高血压)
 1. [王健林退出中国儒意控股有限公司](https://so.toutiao.com/search?keyword=王健林退出中国儒意控股有限公司)
-1. [周杰伦太阳之子称号杭州演唱会破功](https://so.toutiao.com/search?keyword=周杰伦太阳之子称号杭州演唱会破功)
 1. [佘诗曼：非常期待出演新闻女王2](https://so.toutiao.com/search?keyword=佘诗曼：非常期待出演新闻女王2)
 1. [以军称连夜打击多个真主党目标](https://so.toutiao.com/search?keyword=以军称连夜打击多个真主党目标)
-1. [周杰伦问粉丝自己来还是跟朋友来的](https://so.toutiao.com/search?keyword=周杰伦问粉丝自己来还是跟朋友来的)
 1. [马丁回应拒绝跟黄子韬同台](https://so.toutiao.com/search?keyword=马丁回应拒绝跟黄子韬同台)
 1. [叶檀：患癌最怕失去尊严](https://so.toutiao.com/search?keyword=叶檀：患癌最怕失去尊严)
 1. [男子遇大面积虫子吐丝如入盘丝洞](https://so.toutiao.com/search?keyword=男子遇大面积虫子吐丝如入盘丝洞)
